# finance

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTIONS.md  DISCUSSION.md  INVARIANTS.md  README.md  TASKS.md  activate.sh  docker-compose.yml  main.py  pyproject.toml  todos.md
.claude/commands/: finish-task.md  pick-task.md  task.md
.claude/skills/add-task/: SKILL.md
backtesting/: STRATEGY.md  __init__.py  backtester.py  metrics.py  plot.py  portfolio.py  results.py
checkpoints/: calibration.json  calibration_1h.json  signal_model.weights.h5  signal_model_1h.weights.h5  signal_model_1h_config.json  signal_model_config.json
checkpoints/financials/: calibration.json  signal_model.weights.h5  signal_model_config.json
checkpoints/idx_fchi/: signal_model.weights.h5
checkpoints/idx_gdaxi/: signal_model.weights.h5
checkpoints/idx_stoxx50e/: signal_model.weights.h5
checkpoints/indexes/: calibration.json  calibration_directional.json  signal_model.weights.h5  signal_model_config.json
configs/: indexes.json  stocks.json
data/: __init__.py  features.py  fetcher.py
models/: __init__.py  config.py  direction.py  losses.py  mlflow_tracking.py  signal_model.py  training.py  walk_forward.py
signals/: __init__.py  calibration.py  direction.py  generator.py
tests/: __init__.py  conftest.py  test_backtester.py  test_calibration.py  test_features.py  test_fetcher.py  test_losses.py  test_metrics.py  test_new_features.py  test_portfolio.py  test_signal_generation.py  test_slippage.py  test_training.py  test_walk_forward.py
(+8 files in other folders)
